# composeui

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.cfg  setup.py
.github/workflows/: linting.yml  tests.yml  tests_py36.yml
src/composeui/: __init__.py  commontypes.py
src/composeui/apps/: baseapp.py  eventdrivenappmixin.py  qtbaseapp.py  salomeapp.py  salomemoduleapp.py
src/composeui/apps/djangoapp/: __init__.py  wsgi.py
src/composeui/core/: basesignal.py  connect.py  disconnect.py  initialize.py  pendingupdate.py  selectfiles.py  study.py  tools.py
src/composeui/core/icons/: __init__.py  icons.py  icons.qrc  icons_pyside6.py  material_design_icons_LICENSE.txt
src/composeui/core/interfaces/: iactionview.py  ipendingview.py  ipopuptextview.py  iprogressview.py  iselectpathview.py  iview.py  iworkerview.py
src/composeui/core/qt/: actionview.py  fileview.py  groupview.py  popuptextview.py  progressview.py  qtactionview.py  qtfileview.py  qtgroupview.py  qtpopuptextview.py  qtprogressview.py  qtselectpathview.py  qtview.py  qtworkerview.py  selectpathview.py  view.py  workerview.py
src/composeui/core/tasks/: abstracttask.py  oneshottask.py  progresstask.py  tasks.py
src/composeui/core/templates/: header.html
src/composeui/core/views/: actionview.py  iactionview.py  ipendingview.py  ipopuptextview.py  iprogressview.py  iselectpathview.py  iworkerview.py  pendingview.py  popuptextview.py  progressview.py  selectpathview.py  view.py  workerview.py
src/composeui/django/: api.py
src/composeui/django/mainview/: apps.py  urls.py  views.py
src/composeui/django/table/: tableitemsendpoint.py
src/composeui/figure/: __init__.py  figuretoolbar.py  figureview.py  ifigureview.py  qtfiguretoolbar.py  qtfigureview.py
src/composeui/form/: __init__.py  abstractcomboboxitems.py  abstractformitems.py  comboboxitemmodel.py  form.py  formvalidators.py  formview.py  iformview.py  qtformview.py
src/composeui/history/: abstracthistory.py  jsonhistory.py  mashumarohistory.py  sqlitehistory.py
src/composeui/items/core/: abstractitems.py  clipboarditems.py  (+14 more)
src/composeui/linkedtablefigure/: __init__.py  ilinkedtablefigureview.py  linkedtablefigureview.py
src/composeui/mainview/: __init__.py  filetask.py  progresspopup.py  toolbar.py
src/composeui/model/: basemodel.py  djangoormmodel.py  mashumaromodel.py  msgspecmodel.py  pydanticmodel.py  sqlalchemymodel.py  sqlitemodel.py
src/composeui/network/: network.py  networkmanager.py  networkview.py
src/composeui/store/: abstractstore.py  djangoormstore.py  jsonstore.py  mashumarostore.py  msgspecstore.py  pydanticstore.py  salomehdfstore.py  settings.sql  sqlalchemystore.py  sqlitestore.py
src/composeui/vtk/: __init__.py  ivtkview.py  vtkutils.py  vtkview.py
src/composeui/web/: __init__.py
src/examples/asyncview/: __main__.py  app.py  example.py  examplemainview.py  filereader.py  qtexample.py
src/examples/figureview/: __main__.py  app.py  batman.py  batmanview.py  example.py  examplemainview.py  qtexample.py
src/examples/formview/: __main__.py  app.py  example.py  examplemainview.py  pipeapplyform.py  pipeform.py  pipeview.py  qtexample.py  qtpipeview.py  tkexample.py  tkexample2.py
src/examples/linkedtablefigureview/: __main__.py  app.py  example.py  mainview.py  qtexample.py
src/examples/mainview/: __main__.py  app.py  examplemainview.py  qtexample.py
src/examples/multipleviews/: __main__.py  app.py  example.py  examplemainview.py  qtexample.py
src/examples/network/: __main__.py  app.py  example.py  llm.py  qtexample.py
src/examples/networkview/: __main__.py  app.py  example.py  llm.py  qtexample.py
src/examples/probamodelapp/: __main__.py  app.py  manage.py  model.py  urls.py  views.py
src/examples/salomeview/: __main__.py  app.py  cubedefinition.py  cubetable.py  mainview1.py  mainview2.py  module1.py  module2.py  qtmainview1.py  qtmainview2.py
src/examples/simpletableview/: __main__.py  app.py  example.py  examplemainview.py  points.py  qtexample.py
src/examples/tableview/: __main__.py  app.py  example.py  examplemainview.py  points.py  qtexample.py
src/examples/treeview/: __main__.py  app.py  example.py  examplemainview.py  lines.py  qtexample.py
src/examples/vtkview/: __main__.py  app.py  example.py  examplemainview.py  qtexample.py
tests/test_asyncview/: conftest.py  test_filereader.py
tests/test_asyncview/data/: message.txt
tests/test_formview/: conftest.py  test_applypipeview.py  test_pipequery.py  test_pipeview.py
tests/test_linkedtablefigureview/: conftest.py  test_pointsview.py
tests/test_linkedtableview_sqlalchemy/: conftest.py  test_linesview.py
tests/test_linkedtableview_sqlite/: conftest.py  test_linesview.py
tests/test_linkedtableview_sqlite/data/: lines.csv  lines_bad_data_detail_table.csv  lines_id.csv  lines_missing_columns.csv  test_correct.html  test_correct.md
tests/test_mainview/: conftest.py  test_mainview.py
tests/test_multipleviews/: conftest.py  test_toolbar.py
tests/test_probamodelapp/: test_tableitemsendpoint.py
tests/test_salomeview/: conftest.py  test_cubedefinition.py
tests/test_simpletableview/: conftest.py  test_pointsitems.py  test_pointsview.py
tests/test_simpletableview/data/: test_correct.csv  test_incomplete.csv  test_unknown.csv
tests/test_tableview/: conftest.py  test_pagination.py  test_pointsitems.py  test_pointsquery.py  test_pointsview.py
tests/test_tableview/data/: test_correct.csv  test_correct.html  test_correct.md  test_incomplete.csv  test_unknown.csv
tests/test_taskview_mashumaro/: conftest.py  test_taskview.py
tests/test_taskview_msgspec/: conftest.py  test_taskview.py
tests/test_taskview_pydantic/: conftest.py  test_taskview.py
tests/test_treeview/: conftest.py  test_linesview.py
tests/test_treeview/data/: test_correct.csv  test_correct.html  test_correct.md  test_missing_column.csv
tests/test_unit/: test_simpletableitems.py  test_sqlitestore.py  test_textfinder.py
tests/test_vtkview/: conftest.py  test_vtkutils.py  test_vtkview.py
tests/test_vtkview/data/: tetra.vtk  tetra.vtu
(+221 files in other folders)
