[metadata]
name = composeui
version = attr: composeui.__version__
author = El Hadi Moussi
author_email = 50993404+ehmoussi@users.noreply.github.com. 
description = Python framework to build user interfaces
long_description = file: README.md
keywords = widgets, pyqt, mvp
license_files = LICENSE

[options]
include_package_data = True
package_dir =
    =src
packages = find:
python_requires = <3.7
install_requires =
    importlib-metadata;python_version<"3.8"
    qtpy
    typing_extensions
    pyperclip
    dataclasses

[options.packages.find]
exclude =
    examples*
    tests*

[options.package_data]
* = *.html


[options.extras_require]
pyqt5 =
    pyqt5
pyside6 =
    PySide6
matplotlib =
    matplotlib
pandas =
    pandas
    openpyxl
    xlrd
msgspec =
    msgspec;python_version>="3.8"
mashumaro =
    mashumaro
pydantic =
    pydantic
sqlalchemy =
    sqlalchemy
markdown =
    markdown
    tabulate
vtk =
    vtk
async =
    aiofiles
dev =
    pytest
    pytest-cov
    pytest-xdist
    pandas_stubs
    pyqt5-stubs
    types-markdown
    types-openpyxl
    types-aiofiles
    pytest-asyncio
standard =
    %(pyqt5)s
    %(matplotlib)s
    %(pandas)s
    %(mashumaro)s
    %(vtk)s
standard_qt6 =
    %(pyside6)s
    %(matplotlib)s
    %(pandas)s
    %(mashumaro)s
    %(vtk)s
    %(async)s
all =
    %(matplotlib)s
    %(pandas)s
    %(mashumaro)s
    %(msgspec)s
    %(pydantic)s
    %(sqlalchemy)s
    %(markdown)s
    %(vtk)s
    %(async)s